--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+
+
+.main-container {
+  width: 90%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  grid-template-rows: auto 1fr 1fr auto;
+  grid-template-areas: 
+  "header header header"
+  "sidebar card1 card2"
+  "sidebar card3 card4"
+  "footer footer footer";
+  gap: 10px;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+  grid-area: "header";
+  background-color: white;
+  color: blue;
+  border-radius: 8px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar{
+  grid-area: "sidebar";
+  background-color: white;
+  color: #9b59b6;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card1{
+  grid-area: "card1";
+  background-color: white;
+  color: rgb(167, 167, 227);
+  border-radius: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.card2{
+  grid-area: "card1";
+  background-color: white;
+  color: rgb(167, 167, 227);
+  border-radius: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card3{
+  grid-area: "card1";
+  background-color: white;
+  color: rgb(167, 167, 227);
+  border-radius: 8px;
+}
+
+.card4{
+  grid-area: "card1";
+  background-color: white;
+  color: rgb(167, 167, 227);
+  border-radius: 8px;
+}
+
+.footer{
+  grid-area: "footer";
+  background-color: white;
+  border-radius: 8px;
 }
